// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with expenses 1`] = `
<div>
  <h3>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h3>
</div>
`;

exports[`should render ExpensesSummary with expenses 2`] = `
<div>
  <h3>
    Viewing 
    1
     
    expense
     totalling 
    $233,344.35
  </h3>
</div>
`;
